added second section footer and styles

--- a/index.html
+++ b/index.html
@@ -103,25 +103,25 @@
                     <div class="flex jc-between ai-center wrap"> 
                         <div class="flex">
                             <div class="list-div">
-                                <a class="book-size16-color222 capitalize"href="">all</a>
+                                <a class="book-size16-color222 capitalize"href="#">all</a>
                             </div>
                             <div class="list-div witdh">
-                                <a class="book-size16-color222 capitalize"href="">web design</a>
+                                <a class="book-size16-color222 capitalize"href="#">web design</a>
                             </div>
                             <div class="list-div">
-                                <a class="book-size16-color222 uppercase"href="">3D</a>
+                                <a class="book-size16-color222 uppercase"href="#">3D</a>
                             </div>
                             <div class="list-div witdh">
-                                <a class="book-size16-color222 capitalize"href="">app design</a>
+                                <a class="book-size16-color222 capitalize"href="#">app design</a>
                             </div>
                             <div class="list-div witdh">
-                                <a class="book-size16-color222 capitalize"href="">animation</a>
+                                <a class="book-size16-color222 capitalize"href="#">animation</a>
                             </div>
                             <div class="list-div witdh">
-                                <a class="book-size16-color222 capitalize"href="">ilustration</a>
+                                <a class="book-size16-color222 capitalize"href="#">ilustration</a>
                             </div>
                             <div class="list-div">
-                                <a class="book-size16-color222 capitalize"href="">typography</a>
+                                <a class="book-size16-color222 capitalize"href="#">typography</a>
                             </div>
                         </div>
                         <div class="buttom-filter-div">
@@ -132,7 +132,7 @@
                     <div class="flex jc-between wrap">
                         <div class="main-img-div flex wrap relative">
                             <a href="#">
-                                <img class="main-img"src="images/basic images/UI components for unity gaming.png" alt="">
+                                <img class="main-img"src="images/basic images/UI components for unity gaming.png" alt="UI-components">
                                 <h4>UI Components for Unity Gaming</h4>
                             </a>
                             <div class="icon-on-imgdiv">
@@ -144,7 +144,7 @@
                         </div>
                         <div class="main-img-div flex wrap relative">
                             <a href="#">
-                                <img src="images/basic images/Analytics mobile app.png" alt="">
+                                <img src="images/basic images/Analytics mobile app.png" alt="Analytics">
                                 <h4>Analytics Mobile App – Blurr Series</h4>
                             </a>
                             <div class="icon-on-imgdiv">
@@ -156,7 +156,7 @@
                         </div>
                         <div class="main-img-div flex wrap relative">
                             <a href="#">
-                                <img src="images/basic images/estaro dark-mode.png" alt="">
+                                <img src="images/basic images/estaro dark-mode.png" alt="dark-mode">
                                 <h4>Estaro – Dark-mode – Task Management App</h4>
                             </a>
                             <div class="icon-on-imgdiv">
@@ -235,67 +235,146 @@
                     <div class="container">
                         <div class="flex jc-between">
                             <h2>Top Designers</h2>
-                            <a class="color222 font-fam-heavy font-size14"href="#">View all</a>
+                            <a class="color222 opacity-03 font-fam-heavy font-size14"href="#">View all</a>
                         </div>
-                        <div class="flex jc-between">
+                        <div class="flex jc-between wrap">
                             <div class=" flex personal-div">
-                                <img src="images/persons/tran-mau.png" alt="">
+                                <img src="images/persons/tran-mau.png" alt="tran-mau">
                                 <h3>Tran Mau</h3>
                                 <h3>Tri Tam</h3>
                                 <p>Sai Gon, Vietnam</p>
-                                <button class="font-size14 font-fam-heavy">follow</button>
+                                <div class="follow-div flex">
+                                    <button class="font-size14 font-fam-heavy">follow</button>
+                                </div>
                             </div>
                             <div class="flex personal-div">
-                                <img src="images/persons/ghulam.png" alt="">
+                                <img src="images/persons/ghulam.png" alt="ghulam">
                                 <h3>Ghulam</h3>
                                 <h3>Rasool</h3>
                                 <p>Dubai</p>
-                                <button class="font-size14 font-fam-heavy">follow</button>
+                                <div class="follow-div flex">
+                                    <button class="font-size14 font-fam-heavy">follow</button>
+                                </div>
                             </div>
                             <div class="flex personal-div">
-                                <img src="images/persons/zhenya.png" alt="">
+                                <img src="images/persons/zhenya.png" alt="zhenya">
                                 <h3>Zhenya</h3>
                                 <h3>Rynzhuk</h3>
                                 <p>New York City, NY</p>
-                                <button class="font-size14 font-fam-heavy">follow</button>
+                                <div class="follow-div flex">
+                                    <button class="font-size14 font-fam-heavy">follow</button>
+                                </div>
                             </div>
                             <div class="flex personal-div">
-                                <img src="images/persons/ghani.png" alt="">
+                                <img src="images/persons/ghani.png" alt="ghani">
                                 <h3>Ghani</h3>
                                 <h3>Pradita</h3>
                                 <p>Yogyakarta, Indonesia</p>
-                                <button class="font-size14 font-fam-heavy">follow</button>
+                                <div class="follow-div flex">
+                                    <button class="font-size14 font-fam-heavy">follow</button>
+                                </div>
                             </div>
                             <div class="flex personal-div">
-                                <img src="images/persons/sajon.png" alt="">
+                                <img src="images/persons/sajon.png" alt="sajon">
                                 <h3>Sajon</h3>
                                 <p>Earth</p>
-                                <button class="font-size14 font-fam-heavy">follow</button>
+                                <div class="follow-div flex">
+                                    <button class="font-size14 font-fam-heavy">follow</button>
+                                </div>
                             </div>
                             <div class="flex personal-div">
-                                <img src="images/persons/david.png" alt="">
+                                <img src="images/persons/david.png" alt="David">
                                 <h3>David</h3>
                                 <h3>Kovalev</h3>
                                 <p>Sarasota, FL</p>
-                                <button class="font-size14 font-fam-heavy">follow</button>
+                                <div class="follow-div flex">
+                                    <button class="font-size14 font-fam-heavy">follow</button>
+                                </div>
                             </div>
                             <div class="flex personal-div">
-                                <img src="images/persons/ryan.png" alt="">
+                                <img src="images/persons/ryan.png" alt="ryan">
                                 <h3>Ryan</h3>
                                 <h3>Putnam</h3>
                                 <p>Colorado Springs</p>
-                                <button class="font-size14 font-fam-heavy">follow</button>
+                                <div class="follow-div flex">
+                                    <button class="font-size14 font-fam-heavy">follow</button>
+                                </div>
                             </div>
                             <div class="flex personal-div">
-                                <img src="images/persons/dmitry.png" alt="">
+                                <img src="images/persons/dmitry.png" alt="dmitry">
                                 <h3>Dmitry</h3>
                                 <h3>Lauretsky</h3>
                                 <p>Omsk, Russia</p>
-                                <button class="font-size14 font-fam-heavy">follow</button>
+                                <div class="follow-div flex">
+                                    <button class="font-size14 font-fam-heavy">follow</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </section>
+                <footer>
+                    <div class="container flex wrap jc-between footer-page">
+                        <div>
+                           <ul>
+                               <li><h4 class="font-fam-heavy">For designers</h4></li>
+                               <li><a href="#">Go Pro!</a></li>
+                               <li><a href="#">Explore design work</a></li>
+                               <li><a href="#">Design blog</a></li>
+                               <li><a href="#">Overtime podcast</a></li>
+                               <li><a href="#">Dribbble meetups</a></li>
+                               <li><a href="#">Playoffs</a></li>
+                               <li><a href="#">Weekly Warm-Up</a></li>
+                               <li><a href="#">Code of conduct</a></li>
+                           </ul>
+                        </div>
+                        <div>
+                            <ul>
+                               <li><h4 class="font-fam-heavy">Hire designers</h4></li>
+                               <li><a href="#">Post a job opening</a></li>
+                               <li><a href="#">Post a freelance project</a></li>
+                               <li><a href="#">Search for designers</a></li>
+                               <li class="margin-top41"><a href="#">Brands</a></li>
+                               <li class="margin-top41"><a href="#">Advertise with us</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li><h4 class="font-fam-heavy">Company</h4></li>
+                                <li><a href="#">About </a></li>
+                                <li><a href="#">Careers</a></li>
+                                <li><a href="#">Support</a></li>
+                                <li><a href="#"> Media kit</a></li>
+                                <li><a href="#">Dribbble shop</a></li>
+                                <li><a href="#">Testimonials</a></li>
+                                <li><a href="#">API</a></li>
+                                <li><a href="#">Terms of service</a></li>
+                                <li><a href="#">Privacy policy</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li><h4 class="font-fam-heavy">Directories</h4></li>
+                                <li><a href="#">Top designers</a></li>
+                                <li><a href="#">Top design teams</a></li>
+                                <li><a href="#">Design jobs</a></li>
+                                <li><a href="#">Tags</a></li>
+                                <li ><a href="#">Places</a></li>
+                                <li class="margin-top41"><a href="#">Design assets</a></li>
+                                <li class="margin-top41"><a href="#">Shop Creative Market</a></li>
+                            </ul>
+                        </div>
+                   </div>
+                    <div class="flex jc-between container">
+                        <div>
+                            <a href="#"><img src="images/icons/fb.png" alt="facebook"></a>
+                            <a href="#"><img src="images/icons/inst.png" alt="instagram"></a>
+                            <a href="#"><img src="images/icons/twit.png" alt="twitter"></a>
+                        </div>
+                        <a class="font-size16 font-avenir-book color222"href="https://smartacademy.ge/?gclid=Cj0KCQiAqvaNBhDLARIsAH1Pq53q8VPop4dKaOofXRUOzN5PukfTYSnHhFW_8H8JbA8KIK4KE-1oR7oaAqv6EALw_wcB" target="_blunk">for
+                            <span>Smartacademy</span>
+                        </a>
+                    </div>
+                </footer>
             </main>
         </div>
     </div>
