--- a/sec-page.html
+++ b/sec-page.html
@@ -12,70 +12,70 @@
     <div class="container-page flex">
         <aside class="aside-div">
             <div class="flex justify-around div-logo">
-                <a class="logo transition-property" href="index.html"><span>design.</span>today</a>
+                <a class="logo colorfff transition-property" href="index.html"><span>design.</span>today</a>
                 <a href="#"><img src="images/icons/burger-icon.png" alt="burger-icon"></a>
             </div>
             <div class="container-aside">
                 <nav>
                     <ul>
                         <li class="nav-li">
-                            <a class="medium-size16-colorfff"href="#">
-                                 <img src="images/icons/home.png" alt="home">Home
+                            <a class="font-fam-medium colorfff size16"href="#">
+                                 <img class="vertical-align"src="images/icons/home.png" alt="home">Home
                             </a>
                         </li>
                         <li class="nav-li">
-                           <a class="medium-size16-colorfff"href="#">
-                               <img src="images/icons/explore.png" alt="explore">Explore
+                           <a class="font-fam-medium colorfff size16"href="#">
+                               <img class="vertical-align"src="images/icons/explore.png" alt="explore">Explore
                             </a>
                         </li>
                         <li class="nav-li">
-                            <a class="medium-size16-colorfff"href="#">
-                               <img src="images/icons/folders1.png" alt="folder">Folders
+                            <a class="font-fam-medium colorfff size16"href="#">
+                               <img class="vertical-align"src="images/icons/folders1.png" alt="folder">Folders
                             </a>
                         </li>
                         <li class="nav-li">
-                            <a class="medium-size16-colorfff"href="#">
-                               <img src="images/icons/favourites1.png" alt="favourites">Favourites
+                            <a class="font-fam-medium colorfff size16"href="#">
+                               <img class="vertical-align"src="images/icons/favourites1.png" alt="favourites">Favourites
                             </a>
                         </li>
                         <li class="nav-li">
-                            <a class="medium-size16-colorfff"href="#">
-                               <img src="images/icons/activities1.png" alt="avtivites">Activites
+                            <a class="font-fam-medium colorfff size16"href="#">
+                               <img class="vertical-align"src="images/icons/activities1.png" alt="avtivites">Activites
                             </a>
                         </li>
                     </ul>
                 </nav>
             </div>
             <div class="aside-bottom container-aside">
-                <h3 class="uppercase">following</h3>
+                <h3 class="uppercase colorfff font-fam-heavy">following</h3>
                 <ul>
                    <li>
-                       <a class="medium-size16-colorfff" href="#">
-                           <img src="images/persons/sajon.png" alt="sajon">Sajon
+                       <a class="font-fam-medium colorfff size16" href="#">
+                           <img class="vertical-align" src="images/persons/sajon.png" alt="sajon">Sajon
                         </a>
                     </li>
                    <li>
-                       <a class="medium-size16-colorfff"href="#">
-                           <img src="images/persons/tran-mau.png" alt="tran">Tran Mau Tri Tam
+                       <a class="font-fam-medium colorfff size16"href="#">
+                           <img class="vertical-align"src="images/persons/tran-mau.png" alt="tran">Tran Mau Tri Tam
                         </a>
                     </li>
                    <li>
-                       <a class="medium-size16-colorfff"href="#">
-                           <img src="images/persons/ghani.png" alt="ghani">Ghani Pradita
+                       <a class="font-fam-medium colorfff size16"href="#">
+                           <img class="vertical-align"src="images/persons/ghani.png" alt="ghani">Ghani Pradita
                         </a>
                     </li>
                    <li>
-                       <a class="medium-size16-colorfff"href="#">
-                           <img src="images/persons/david.png" alt="david">David Kovalev
+                       <a class="font-fam-medium colorfff size16"href="#">
+                           <img class="vertical-align"src="images/persons/david.png" alt="david">David Kovalev
                         </a>
                     </li>
                    <li>
-                       <a class="medium-size16-colorfff"href="#">
-                           <img src="images/persons/ryan.png" alt="ryan">Ryan Putnam
+                       <a class="font-fam-medium colorfff size16"href="#">
+                           <img class="vertical-align"src="images/persons/ryan.png" alt="ryan">Ryan Putnam
                         </a>
                     </li>
                 </ul>
-                <button>loadmore (15)</button>
+                <button class="colorfff font-size14 font-fam-heavy">loadmore (15)</button>
             </div>
         </aside>
         <div class="main-page">
@@ -100,6 +100,72 @@
                     <button class="uppercase upload">upload</button>
                 </div>
             </header>
+            <main>
+                <section></section>
+                <footer>
+                    <div class="container flex wrap jc-between footer-page">
+                        <div>
+                           <ul>
+                               <li><h4 class="font-fam-heavy">For designers</h4></li>
+                               <li><a href="#">Go Pro!</a></li>
+                               <li><a href="#">Explore design work</a></li>
+                               <li><a href="#">Design blog</a></li>
+                               <li><a href="#">Overtime podcast</a></li>
+                               <li><a href="#">Dribbble meetups</a></li>
+                               <li><a href="#">Playoffs</a></li>
+                               <li><a href="#">Weekly Warm-Up</a></li>
+                               <li><a href="#">Code of conduct</a></li>
+                           </ul>
+                        </div>
+                        <div>
+                            <ul>
+                               <li><h4 class="font-fam-heavy">Hire designers</h4></li>
+                               <li><a href="#">Post a job opening</a></li>
+                               <li><a href="#">Post a freelance project</a></li>
+                               <li><a href="#">Search for designers</a></li>
+                               <li class="margin-top41"><a href="#">Brands</a></li>
+                               <li class="margin-top41"><a href="#">Advertise with us</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li><h4 class="font-fam-heavy">Company</h4></li>
+                                <li><a href="#">About </a></li>
+                                <li><a href="#">Careers</a></li>
+                                <li><a href="#">Support</a></li>
+                                <li><a href="#"> Media kit</a></li>
+                                <li><a href="#">Dribbble shop</a></li>
+                                <li><a href="#">Testimonials</a></li>
+                                <li><a href="#">API</a></li>
+                                <li><a href="#">Terms of service</a></li>
+                                <li><a href="#">Privacy policy</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li><h4 class="font-fam-heavy">Directories</h4></li>
+                                <li><a href="#">Top designers</a></li>
+                                <li><a href="#">Top design teams</a></li>
+                                <li><a href="#">Design jobs</a></li>
+                                <li><a href="#">Tags</a></li>
+                                <li ><a href="#">Places</a></li>
+                                <li class="margin-top41"><a href="#">Design assets</a></li>
+                                <li class="margin-top41"><a href="#">Shop Creative Market</a></li>
+                            </ul>
+                        </div>
+                   </div>
+                    <div class="flex jc-between container">
+                        <div>
+                            <a href="#"><img src="images/icons/fb.png" alt="facebook"></a>
+                            <a href="#"><img src="images/icons/inst.png" alt="instagram"></a>
+                            <a href="#"><img src="images/icons/twit.png" alt="twitter"></a>
+                        </div>
+                        <a class="font-size16 font-avenir-book color222"href="https://smartacademy.ge/?gclid=Cj0KCQiAqvaNBhDLARIsAH1Pq53q8VPop4dKaOofXRUOzN5PukfTYSnHhFW_8H8JbA8KIK4KE-1oR7oaAqv6EALw_wcB" target="_blunk">for
+                            <span>Smartacademy</span>
+                        </a>
+                    </div>
+                </footer>
+            </main>
         </div>
     </div>
 </body>
