add responsive for index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body> 
     <div class="container-page flex">
-        <aside class="aside-div">
+        <aside class="aside-div display-none">
             <div class="flex justify-around div-logo">
                 <a class="logo colorfff transition-property" href="index.html"><span>design.</span>today</a>
                 <a href="#"><img src="images/icons/burger-icon.png" alt="burger-icon"></a>
@@ -88,11 +88,13 @@
                 </div>
                 <div class="flex header-right-div">
                     <a class="uppercase"href="">go pro!</a>
-                    <div class="relative">
-                       <a href="#"><img src="images/icons/mail.png" alt="mail"><span></span></a>
-                    </div>
-                    <div class="relative">
-                       <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
+                    <div class="flex colum-reset">
+                        <div class="relative">
+                            <a href="#"><img src="images/icons/mail.png" alt="mail"><span></span></a>
+                        </div>
+                        <div class="relative">
+                            <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
+                        </div>
                     </div>
                     <a href="sec-page.html"><img src="images/persons/Group 33.png" alt="photo"> </a>
                     <button class="uppercase upload colorfff font-size14 font-fam-heavy">upload</button>
@@ -108,7 +110,7 @@
                             <div class="list-div witdh">
                                 <a class="book-size16-color222 capitalize"href="#">web design</a>
                             </div>
-                            <div class="list-div">
+                            <div class="list-div witdh">
                                 <a class="book-size16-color222 uppercase"href="#">3D</a>
                             </div>
                             <div class="list-div witdh">
@@ -125,7 +127,7 @@
                             </div>
                         </div>
                         <div class="buttom-filter-div">
-                            <img class="vertical-align"src="images/icons/filter.png" alt="filter">
+                            <img class="vertical-align display-none"src="images/icons/filter.png" alt="filter">
                             <button class="buttom-filter capitalize">filters</button>
                         </div>
                     </div>
