--- a/sec-page.html
+++ b/sec-page.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="page-design">
+    <meta name="keywords" content="design, 3D, app designe, ilustration, animation,typography">
+    <meta name="author" content="james bond">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url"content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
+    <meta property="og:type"content="article" />
+    <meta property="og:title"content="When Great Minds Don’t Think Alike" />
+    <meta property="og:description"content="How much does culture influence creative thinking?" />
+    <meta property="og:image"content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
     <link rel="stylesheet" href="styles/font.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
 </head>
 <body> 
     <div class="container-page flex">
-        <aside class="aside-div">
+        <aside class="aside-div display-none">
             <div class="flex justify-around div-logo">
                 <a class="logo colorfff transition-property" href="index.html"><span>design.</span>today</a>
                 <a href="#"><img src="images/icons/burger-icon.png" alt="burger-icon"></a>
