--- a/sec-page.html
+++ b/sec-page.html
@@ -96,11 +96,13 @@
                 </div>
                 <div class="flex header-right-div">
                     <a class="uppercase"href="">go pro!</a>
-                    <div class="relative">
-                       <a href="#"><img src="images/icons/mail.png" alt="mail"><span></span></a>
-                    </div>
-                    <div class="relative">
-                       <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
+                    <div class="flex colum-reset">
+                        <div class="relative">
+                            <a href="#"><img src="images/icons/mail.png" alt="mail"><span></span></a>
+                        </div>
+                        <div class="relative">
+                            <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
+                        </div>
                     </div>
                     <div class="div-person flex">
                        <a href="index.html"><img src="images/icons/Group 79.png" alt="photo"> </a>
