--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <main>
                 <section class="container">
                     <div class="flex jc-between ai-center wrap"> 
-                        <div class="flex">
+                        <div class="flex display-none">
                             <div class="list-div">
                                 <a class="book-size16-color222 capitalize"href="#">all</a>
                             </div>
@@ -132,9 +132,9 @@
                         </div>
                     </div>
                     <div class="flex jc-between wrap">
-                        <div class="main-img-div flex wrap relative">
+                        <div class="main-img-div flex relative">
                             <a href="#">
-                                <img class="main-img"src="images/basic images/UI components for unity gaming.png" alt="UI-components">
+                                <img src="images/basic images/UI components for unity gaming.png" alt="UI-components">
                                 <h4>UI Components for Unity Gaming</h4>
                             </a>
                             <div class="icon-on-imgdiv">
@@ -144,7 +144,7 @@
                                 <img src="images/icons/Component 6 – 2.png" alt="heart">
                             </div>
                         </div>
-                        <div class="main-img-div flex wrap relative">
+                        <div class="main-img-div flex relative">
                             <a href="#">
                                 <img src="images/basic images/Analytics mobile app.png" alt="Analytics">
                                 <h4>Analytics Mobile App – Blurr Series</h4>
@@ -156,7 +156,7 @@
                                 <img src="images/icons/Component 6 – 2.png" alt="heart">
                             </div>
                         </div>
-                        <div class="main-img-div flex wrap relative">
+                        <div class="main-img-div flex relative">
                             <a href="#">
                                 <img src="images/basic images/estaro dark-mode.png" alt="dark-mode">
                                 <h4>Estaro – Dark-mode – Task Management App</h4>
@@ -168,9 +168,9 @@
                                 <img src="images/icons/Component 6 – 2.png" alt="heart">
                             </div>
                         </div>
-                        <div class="main-img-div flex wrap relative">
+                        <div class="main-img-div flex relative">
                             <a href="#">
-                                <img class="main-img"src="images/basic images/live streaming.png" alt="">
+                                <img src="images/basic images/live streaming.png" alt="">
                                 <h4>Live streaming application for gamers.</h4>
                             </a>
                             <div class="icon-on-imgdiv">
@@ -180,7 +180,7 @@
                                 <img src="images/icons/Component 6 – 2.png" alt="heart">
                             </div>
                         </div>
-                        <div class="main-img-div flex wrap relative">
+                        <div class="main-img-div flex relative">
                             <a href="#">
                                 <img src="images/basic images/dark mockup.png" alt="">
                                 <h4>Dark Mockup for Unity Gaming</h4>
@@ -192,7 +192,7 @@
                                 <img src="images/icons/Component 6 – 2.png" alt="heart">
                             </div>
                         </div>
-                        <div class="main-img-div flex wrap relative">
+                        <div class="main-img-div flex relative">
                             <a href="#">
                                 <img src="images/basic images/smm-social media managment.png" alt="">
                                 <h4>SMM – Social Media Management – App UI</h4>
@@ -204,7 +204,7 @@
                                 <img src="images/icons/Component 6 – 2.png" alt="heart">
                             </div>
                         </div>
-                        <div class="main-img-div flex wrap relative">
+                        <div class="main-img-div flex relative">
                             <a href="#">
                                 <img src="images/basic images/food app.png" alt="">
                                 <h4>Food App 2.0</h4>
@@ -216,7 +216,7 @@
                                 <img src="images/icons/Component 6 – 2.png" alt="heart">
                             </div>
                         </div>
-                        <div class="main-img-div  flex wrap relative">
+                        <div class="main-img-div flex relative">
                             <a href="#">
                                 <img src="images/basic images/Rectangle 48@2x.png" alt="">
                                 <h4>Live streaming application for gamers.</h4>
